--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -51,6 +51,10 @@
     h2 {
       font-size: 30px;
     }
+
+    .projects-title {
+      background-attachment: scroll;
+    }
   }
 
   .cards-container {
