--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -176,6 +176,10 @@
       li {
         font-size: 18px;
       }
+
+      .skills-title {
+        background-attachment: scroll;
+      }
     }
 
     .backend-box {
